--- a/packages/css/variables.css
+++ b/packages/css/variables.css
@@ -1,4 +1,5 @@
 :root {
+  --font-size: 16px;
   --border-width: 2px;
   --border-radius: 2px;
   --space-small: 8px;
@@ -17,6 +18,7 @@
   --danger-diff-color: #ffffff;
   --disabled-color: #a3a3a3;
   --disabled-diff-color: #eeeeee;
+  --overlay-color: #00000022;
 }
 
 /* dark theme colors */
@@ -27,5 +29,6 @@
     --primary-color: #f061c5;
     --secondary-color: #ffffff;
     --secondary-diff-color: #444444;
+    --overlay-color: #ffffff22;
   }
 }
