--- a/packages/css/Accordion.css
+++ b/packages/css/Accordion.css
@@ -5,6 +5,12 @@
 
 .ac-accordion__header {
   display: flex;
+  width: 100%;
+  padding: 0;
+  border: 0;
+  background: transparent;
+  color: inherit;
+  text-align: unset;
 }
 
 .ac-accordion__header-inner {
@@ -15,7 +21,4 @@
 
 .ac-accordion__header-close {
   padding: var(--space-medium);
-  border: 0;
-  background: transparent;
-  color: inherit;
 }
