--- a/packages/css/doc/index.css
+++ b/packages/css/doc/index.css
@@ -1,2 +1,6 @@
+body {
+  overflow-y: scroll; /* avoid content position bouncing */
+}
+
 @import url("./DocApp.css");
 @import url("./DocContainer.css");
