--- a/packages/css/Input.css
+++ b/packages/css/Input.css
@@ -11,6 +11,7 @@
   border-top-color: transparent;
   border-left-color: transparent;
   border-right-color: transparent;
+  border-radius: 0;
 }
 
 .ac-input--filled {
