--- a/packages/css/reset.css
+++ b/packages/css/reset.css
@@ -1,16 +1,26 @@
 /*
-================================================================================
+
 Global Style Reset
-================================================================================
+
+- Disable browser specific appearances and behaviors
+- Unify fonts, sizes and colors
+- Add all goodness for modern web design
+
 */
 
-/* Scrollbar: Firefox */
+/*
+--------------------------------------------------------------------------------
+General
+--------------------------------------------------------------------------------
+*/
+
 * {
-  scrollbar-color: var(--overlay-color) transparent;
-  scrollbar-width: auto;
+  scroll-behavior: smooth; /* smooth scroll when clicking anchors inside page */
+  scrollbar-color: var(--overlay-color) transparent; /* scrollbar in firefox */
+  scrollbar-width: auto; /* scrollbar in firefox */
 }
 
-/* Scrollbar: Chrome */
+/* scrollbar in chrome */
 *::-webkit-scrollbar {
   background: transparent;
 }
@@ -18,9 +28,25 @@ Global Style Reset
   background: var(--overlay-color);
 }
 
-/* Selection */
+/* selection */
 *::selection {
-  background: var(--overlay-color);
+  background: var(--selection-color);
+}
+
+/* remove dotted outlines of buttons and links in firefox */
+::-moz-focus-inner {
+  border: 0;
+}
+
+/*
+--------------------------------------------------------------------------------
+Root elements
+--------------------------------------------------------------------------------
+*/
+
+html {
+  line-height: 1.5;
+  font-size: 16px; /* fixed font size for better web design */
 }
 
 body {
@@ -30,16 +56,14 @@ body {
   color: var(--text-color);
 }
 
+/*
+
+Text elements
+
+*/
+
 a {
   color: var(--link-color);
-}
-
-code {
-  padding: 0 var(--space-small);
-  border-radius: var(--border-radius);
-  background: var(--overlay-color);
-  font-size: var(--font-size);
-  font-weight: normal;
 }
 
 h1,
@@ -55,4 +79,8 @@ h6 {
 hr {
   width: 10rem;
   margin: 3rem 0;
+}
+
+button {
+  cursor: pointer;
 }
