--- a/packages/css/index.css
+++ b/packages/css/index.css
@@ -2,6 +2,7 @@
 @import url("./reset.css");
 
 @import url("./Accordion.css");
+@import url("./AspectRatio.css");
 @import url("./Button.css");
 @import url("./Icon.css");
 @import url("./Input.css");
