feat(NavDots): new component

--- a/packages/css/index.css
+++ b/packages/css/index.css
@@ -6,5 +6,6 @@
 @import url("./Button.css");
 @import url("./Icon.css");
 @import url("./Input.css");
+@import url("./NavDots.css");
 @import url("./ProductCard.css");
 @import url("./Slides.css");
