--- a/packages/css/variables.css
+++ b/packages/css/variables.css
@@ -3,6 +3,7 @@
   --font-family: "Source Sans Pro";
   --border-width: 1px;
   --border-radius: 5px;
+  --space-tiny: 4px;
   --space-small: 8px;
   --space-medium: 16px;
   --space-large: 32px;
