feat(variables): change primary color

--- a/packages/css/variables.css
+++ b/packages/css/variables.css
@@ -13,7 +13,7 @@
   --background-color: #ffffff;
   --alt-background-color: #dddddd;
   --link-color: #089784;
-  --primary-color: #7a175d;
+  --primary-color: #911d6e;
   --primary-diff-color: #ffffff;
   --secondary-color: #444444;
   --secondary-diff-color: #ffffff;
@@ -30,7 +30,7 @@
   --background-color: #ffffff;
   --alt-background-color: #dddddd;
   --link-color: #089784;
-  --primary-color: #7a175d;
+  --primary-color: #911d6e;
   --primary-diff-color: #ffffff;
   --secondary-color: #444444;
   --secondary-diff-color: #ffffff;
